remove employer field

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "PhD candidate at University of Alberta"
   location         : "Edmonton"
-  employer         : ""
+  employer         : 
   uri              : # URL
   email            : "solinas@ualberta.ca" 
 
