--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Christopher Solinas"
   pronouns         : # example: "she/her"  
-  bio              : "PhD candidate at University of Alberta"
+  bio              : "PhD candidate in Computing Science at the University of Alberta"
   location         : "Edmonton"
   employer         : 
   uri              : # URL
