--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "media"
+  - title: "Media"
     url: /media/    
 
   - title: "Teaching"
