--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Christopher Solinas"
   pronouns         : # example: "she/her"  
-  bio              : "PhD candidate in Computing Science at the University of Alberta"
+  bio              : "PhD candidate in Computing Science"
   location         : "Edmonton"
-  employer         : 
+  employer         : "University of Alberta / AMII
   uri              : # URL
   email            : "solinas@ualberta.ca" 
 
