--- a/_config.yml
+++ b/_config.yml
@@ -199,16 +199,10 @@ kramdown:
 
 # Collections
 collections:
-  teaching:
-    output: true
-    permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
-  talks:
+  media:
     output: true
     permalink: /:collection/:path/
 
@@ -233,15 +227,6 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _teaching
-  - scope:
-      path: ""
-      type: teaching
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
   # _publications
   - scope:
       path: ""
@@ -251,21 +236,12 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _media
   - scope:
       path: ""
-      type: portfolio
+      type: media
     values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
-  # _talks
-  - scope:
-      path: ""
-      type: talks
-    values:
-      layout: talk
+      layout: media
       author_profile: true
       share: true
 
