--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "PhD candidate in Computing Science"
   location         : "Edmonton"
-  employer         : "University of Alberta / AMII
+  employer         : "University of Alberta / AMII"
   uri              : # URL
   email            : "solinas@ualberta.ca" 
 
